[package]
name = "lamb"
version = "0.1.0"
edition = "2021"

[dependencies]
ariadne = { version = "0.1.5", optional = true }
chumsky = { version = "0.8.0", optional = true }
logos = { version = "0.12.1", optional = true }

[features]
default = ["repl", "prelude"]
repl = ["dep:ariadne", "dep:chumsky", "dep:logos"]
prelude = []

[[bin]]
name = "lamb"
required-features = ["repl"]