[package]
name = "lamb"
description = "Pure untyped lambda calculus in safe Rust."
version = "0.1.0"
edition = "2021"
authors = ["Indraneel Mahendrakumar"]
repository = "https://github.com/Carnagion/lamb"
documentation = "https://docs.rs/lamb"
readme = "README.md"
license = "MIT"
keywords = ["lambda-calculus", "functional", "programming-language", "repl", "interpreter"]
categories = ["command-line-utilities", "compilers", "mathematics", "parser-implementations"]

[dependencies]
ariadne = { version = "0.1.5", optional = true }
chumsky = { version = "0.8.0", optional = true }
logos = { version = "0.12.1", optional = true }

[features]
repl = ["dep:ariadne", "dep:chumsky", "dep:logos"]
prelude = []

[[bin]]
name = "lamb"
required-features = ["repl"]